[package]
name = "zuub-stedi-fuzz-tester"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust tool for generating realistic Stedi API responses and fuzz testing integrations."
license = "MIT"
repository = "https://github.com/yourrepo/zuub-stedi-fuzz-tester"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
async-trait = "0.1"
config = "0.13"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
